[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graft"
version = "0.1.0"
description = "A conversation harness for the Anthropic API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Claude Opus 4.5"}
    {name = "John"}
]
dependencies = [
    "anthropic>=0.18.0",
]

[project.scripts]
graft = "graft:main"

